--- a/src/app/modules/layout/components/navbar/navbar.component.html
+++ b/src/app/modules/layout/components/navbar/navbar.component.html
@@ -13,9 +13,15 @@
         </button>
       </div>
 
-      <!-- Logo -->
-      <div class="flex items-center justify-start sm:order-2 md:mr-10 md:hidden">
-        <app-search-bar class="w-full pr-0 md:pr-5 rounded "></app-search-bar>
+      <!-- Mobile header -->
+      <div class="flex flex-1 items-center justify-between sm:order-2 md:mr-10 md:hidden">
+        <div class="flex items-center justify-center w-full">
+          <img class="h-8 w-auto" src="assets/images/logo.png" alt="Logo">
+          <b class="text-base font-bold text-foreground">
+            J'ai la ref !
+          </b>
+        </div>
+        <app-search-bar class="mr-4"></app-search-bar>
 
       </div>
 
