search reset when search is null

--- a/src/app/modules/dashboard/components/ref/ref-dual-card/ref-dual-card.component.html
+++ b/src/app/modules/dashboard/components/ref/ref-dual-card/ref-dual-card.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col rounded-lg bg-background p-8 sm:flex-row" *ngIf="ref">
+<div class="flex flex-col rounded-lg bg-background p-4 md:p-8 sm:flex-row" *ngIf="ref">
   <div
     class=" relative  flex-1 cursor-pointer rounded-md bg-cover transition duration-150 ease-in-out hover:opacity-75 flex justify-center"
     (click)="navigateToRef(ref)">
