--- a/src/app/modules/dashboard/components/ref/ref-table/ref-table.component.html
+++ b/src/app/modules/dashboard/components/ref/ref-table/ref-table.component.html
@@ -1,4 +1,4 @@
-<div class="flex-col rounded-lg bg-background px-8 py-8 sm:flex-row">
+<div class="flex-col rounded-lg bg-background px-4 md:px-8 py-4 md:py-8 sm:flex-row">
   <div class="mb-4 flex items-center justify-between">
     <div class="flex-col items-center">
       <h3 class="text-md font-bold text-foreground">Dernières refs ajoutées</h3>
@@ -16,9 +16,9 @@
       <thead class="text-xs uppercase text-muted-foreground">
         <tr>
           <th class="py-3 text-left"></th>
-          <th class="py-3 text-right hidden md:table-cell">Author</th>
+          <th class="py-3 text-right hidden md:table-cell">Auteur</th>
           <th class="py-3 text-right hidden md:table-cell">Ref</th>
-          <th class="py-3 text-right hidden md:table-cell">View</th>
+          <th class="py-3 text-right hidden md:table-cell">Visionner</th>
         </tr>
       </thead>
       <!--end Table head-->
