--- a/src/app/modules/ref/ref-upload/ref-upload.component.html
+++ b/src/app/modules/ref/ref-upload/ref-upload.component.html
@@ -79,7 +79,7 @@
 
       <div class="mb-2 flex items-center justify-end space-x-3">
 
-        <app-button impact="none" tone="primary" shape="rounded" size="small">
+        <app-button impact="none" tone="primary" shape="rounded" size="small" (click)="openTuto()">
           Besoin d'aide? Consulte le tutoriel
         </app-button>
       </div>
@@ -240,3 +240,4 @@
     </div>
   </div>
 </app-ref-modal>
+<app-ref-tuto></app-ref-tuto>
