--- a/src/app/modules/dashboard/components/ref/ref-dual-card/ref-dual-card.component.html
+++ b/src/app/modules/dashboard/components/ref/ref-dual-card/ref-dual-card.component.html
@@ -91,7 +91,7 @@
               stroke="#fff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
           </g>
         </svg>
-        <span>Partages la ref !</span>
+        <span>Partage la ref !</span>
       </button>
       <button (click)="navigateToRef(ref)"
         class="lex-none rounded-md bg-card px-4 py-2.5 text-sm font-semibold text-muted-foreground hover:bg-muted hover:text-foreground">
