--- a/src/app/modules/ref/ref-view/ref-view.component.html
+++ b/src/app/modules/ref/ref-view/ref-view.component.html
@@ -69,7 +69,7 @@
                 stroke="#fff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
             </g>
           </svg>
-          <span>Partages la ref !</span>
+          <span>Partage la ref !</span>
         </button>
       </div>
     </div>
