--- a/src/app/modules/ref/ref-upload/ref-upload.component.html
+++ b/src/app/modules/ref/ref-upload/ref-upload.component.html
@@ -94,7 +94,8 @@
   </div>
   <div class="flex justify-center items-center">
     <div class="svg-animate flex flex-col gap-5">
-      <svg xml:space="preserve" viewBox="165.679002076 3.5197575987000005 214.95497999999998 272.27703"
+      <svg class="svg-arrow" xml:space="preserve"
+        viewBox="165.679002076 3.5197575987000005 214.95497999999998 272.27703"
         xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg" id="Capa_1" version="1.1"
         stroke-width="2" stroke="currentColor" fill="currentColor" width="200px" height="200px">
         <g>
