--- a/src/app/modules/dashboard/components/nft/nft-dual-card/nft-dual-card.component.html
+++ b/src/app/modules/dashboard/components/nft/nft-dual-card/nft-dual-card.component.html
@@ -1,7 +1,7 @@
 <div class="flex min-h-[420px] flex-col rounded-lg bg-background p-8 sm:flex-row">
-  <div
-    [ngStyle]="{ 'background-image': 'url(' + nft.image + ')' }"
-    class="min-h-[200px] w-full flex-1 cursor-pointer rounded-md bg-cover transition duration-150 ease-in-out hover:opacity-75"></div>
+  <div [ngStyle]="{ 'background-image': 'url(' + nft.image + ')' }"
+    class="min-h-[200px] w-full flex-1 cursor-pointer rounded-md bg-cover transition duration-150 ease-in-out hover:opacity-75">
+  </div>
   <!-- Details  -->
   <div class="mt-4 flex flex-1 flex-col justify-between space-y-2 sm:ml-6 md:mt-0">
     <div>
