--- a/src/app/modules/layout/components/navbar/navbar-mobile/navbar-mobile.component.html
+++ b/src/app/modules/layout/components/navbar/navbar-mobile/navbar-mobile.component.html
@@ -11,7 +11,7 @@
     menuService.showMobileMenu
       ? 'pointer-events-auto scale-100 animate-fade-in-up opacity-100 duration-200'
       : 'pointer-events-none scale-95 opacity-0 duration-100 ease-out'
-  " class="absolute inset-x-0 top-0 z-10 origin-top-right transform p-2 transition md:hidden ">
+  " class="absolute inset-x-0 top-0 z-10 origin-top-right transform p-2 transition md:hidden navbar-container">
   <div class="rounded-lg bg-background shadow-lg">
     <div class="pt-5 pb-6">
       <div class="flex items-center justify-between px-5">
@@ -25,7 +25,7 @@
           </div>
         </div>
         <div class="-mr-2">
-          <button (click)="toggleMobileMenu()" type="button"
+          <button (click)="toggleMobileMenu($event)" type="button"
             class="inline-flex items-center justify-center rounded-md p-2 text-muted-foreground transition-transform focus:outline-none focus:ring-2 focus:ring-inset focus:ring-primary hover:rotate-90 hover:bg-card hover:text-foreground">
             <span class="sr-only">Close menu</span>
             <!-- Heroicon name: outline/x -->
