--- a/src/app/modules/ref/ref-tuto/ref-tuto.component.html
+++ b/src/app/modules/ref/ref-tuto/ref-tuto.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="displayed" class="fixed inset-0 bg-gray-900 bg-opacity-75 flex justify-center items-center z-50"
-  (swipeleft)="nextStep()" (swiperight)="prevStep()">
+  (swipeleft)="nextStep()" (swiperight)="prevStep()" (swipeup)="nextStep()">
   <div
     class="flex flex-col relative bg-white p-6 md:rounded-lg shadow-lg w-full h-full sm:w-full sm:h-full md:w-1/2 md:max-w-lg md:h-auto mx-0 md:mx-4">
     <!-- Croix de fermeture -->
