--- a/src/app/modules/ref/ref-infinite-scroll/ref-infinite-scroll.component.scss
+++ b/src/app/modules/ref/ref-infinite-scroll/ref-infinite-scroll.component.scss
@@ -1,39 +1,40 @@
 .ref-container {
-  max-height: calc(100vh - 60px);
-  min-height: calc(100vh - 60px);
-  overflow: hidden;
-  display: flex;
-}
-
-.ref-content {
+  scroll-snap-type: y mandatory;
+  overflow-y: scroll;
   height: 100%;
+
+  /* Personnaliser la scrollbar pour les navigateurs basés sur WebKit (Chrome, Safari) */
+  &::-webkit-scrollbar {
+    width: 6px; /* Largeur de la scrollbar */
+  }
+
+  &::-webkit-scrollbar-track {
+    background: transparent; /* Couleur de l'arrière-plan de la scrollbar */
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.3); /* Couleur du "pouce" de la scrollbar */
+    border-radius: 3px; /* Arrondir les coins */
+  }
+
+  /* Personnaliser la scrollbar pour Firefox */
+  scrollbar-width: thin; /* Largeur de la scrollbar */
+  scrollbar-color: rgba(0, 0, 0, 0.3) transparent; /* Couleur du pouce et du track */
+}
+.ref-item {
+  scroll-snap-align: start;
+  min-height: calc(100vh - 150px);
   display: flex;
   flex-direction: column;
 }
 
-.swipe-overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1; /* Au-dessus de l'iframe */
-  background: transparent; /* Invisible */
-}
-
-.ref-item {
-  position: relative;
-  height: calc(100vh - 60px);
-  display: flex;
-}
-
-.iframe-container {
+.ref-iframe {
   flex-grow: 1;
   width: 100%;
   height: 100%;
 }
 
-iframe {
-  width: 100%;
-  height: 100%;
+.ref-info {
+  padding: 1rem;
+  background-color: #fff;
 }
