--- a/src/app/modules/ref/ref-infinite-scroll/ref-infinite-scroll.component.html
+++ b/src/app/modules/ref/ref-infinite-scroll/ref-infinite-scroll.component.html
@@ -2,65 +2,8 @@
   <div class="ref-content w-full h-full flex flex-col transition-transform duration-500">
     <div *ngFor="let ref of refs; let i = index" class="ref-item h-full flex" #refItem [attr.data-index]="i"
       [attr.id]="'ref' + i">
-      <div class="ref-details p-6 h-full w-full flex flex-col">
-        <div class="h-full w-full flex gap-5 flex-col padding p-4 md:p-8 bg-background rounded-xl" *ngIf="ref">
-          <div class="h-full" *ngIf="ref.tiktokVideoUrl">
-            <iframe class="rounded-xl" width="100%" height="100%" [src]="ref.tiktokVideoUrl" allow="fullscreen"
-              title="TikTok Video" allow="autoplay; encrypted-media"></iframe>
-          </div>
-          <div class="flex justify-between flex-col sm:flex-row gap-3 sm:gap-0">
-            <div>
-              <h2 class="text-2xl font-semibold text-foreground">
-                {{ ref.title }}
-              </h2>
-              <small class="font-semibold text-muted-foreground">{{
-                ref.memeAuthor
-                }}</small>
-            </div>
-            <div class="flex flex-col sm:flex-row sm:justify-start sm:space-x-8 gap-3 sm:gap-0">
-              <div class="flex space-x-8 justify-between">
-                <!-- Avatar -->
-                <div class="flex items-center space-x-2">
-                  <div
-                    class="flex h-7 w-7 flex-shrink-0 items-center justify-center rounded-full bg-primary text-center">
-                    <span class="text-xs font-semibold text-primary-foreground">
-                      <!-- SVG icon here -->
-                    </span>
-                  </div>
-
-                  <div class="flex flex-col">
-                    <small class="text-xs text-muted-foreground">
-                      Visionnée
-                    </small>
-                    <a class="text-xs font-semibold text-foreground hover:text-primary">fois</a>
-                  </div>
-                </div>
-
-                <!-- Price -->
-                <div class="flex items-center space-x-2">
-                  <div
-                    class="flex h-7 w-7 flex-shrink-0 items-center justify-center rounded-full bg-primary text-center">
-                    <span class="text-xs font-semibold text-primary-foreground">
-                      <!-- SVG icon here -->
-                    </span>
-                  </div>
-
-                  <div class="flex flex-col">
-                    <small class="text-xs text-muted-foreground">
-                      Partagée
-                    </small>
-                    <a href="" class="text-xs font-semibold text-foreground hover:text-primary"></a>
-                  </div>
-                </div>
-              </div>
-              <button id="share-ref"
-                class="flex justify-center items-center gap-2 rounded-md bg-primary px-4 py-2.5 text-sm font-semibold text-primary-foreground">
-                <!-- Share Icon -->
-                <span>Partage la ref !</span>
-              </button>
-            </div>
-          </div>
-        </div>
+      <div class="ref-details p-6 h-full w-full">
+        <app-ref-player *ngIf="ref" [ref]="ref"></app-ref-player>
       </div>
     </div>
   </div>
