--- a/src/app/modules/ref/ref-view/ref-view.component.html
+++ b/src/app/modules/ref/ref-view/ref-view.component.html
@@ -1,77 +1,3 @@
 <div class="h-full p-4 md:p-8 ">
-  <div class="h-full w-full flex gap-5 flex-col padding p-4 md:p-8 bg-background rounded-xl" *ngIf="ref ">
-    <div class="h-full" *ngIf="tiktokVideoUrl">
-      <iframe class="rounded-xl" width="100%" height="100%" [src]="tiktokVideoUrl" allow="fullscreen"
-        title="test"></iframe>
-    </div>
-    <div class="flex justify-between flex-col sm:flex-row gap-3 sm:gap-0">
-      <div>
-        <h2 class="text-2xl font-semibold text-foreground">{{ref.title}}</h2>
-        <small class="font-semibold text-muted-foreground">{{ref.memeAuthor}}</small>
-      </div>
-      <div class="flex flex-col sm:flex-row sm:justify-start sm:space-x-8 gap-3 sm:gap-0">
-        <div class="flex space-x-8 justify-between">
-          <!-- Avatar -->
-          <div class="flex items-center space-x-2">
-            <div class="flex h-7 w-7 flex-shrink-0 items-center justify-center rounded-full bg-primary text-center">
-              <span class="text-xs font-semibold text-primary-foreground">
-                <svg viewBox="0 0 1024 1024" width="18" height="18" xmlns="http://www.w3.org/2000/svg" fill="#000000">
-                  <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                  <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
-                  <g id="SVGRepo_iconCarrier">
-                    <path fill="#fff"
-                      d="M512 160c320 0 512 352 512 352S832 864 512 864 0 512 0 512s192-352 512-352zm0 64c-225.28 0-384.128 208.064-436.8 288 52.608 79.872 211.456 288 436.8 288 225.28 0 384.128-208.064 436.8-288-52.608-79.872-211.456-288-436.8-288zm0 64a224 224 0 1 1 0 448 224 224 0 0 1 0-448zm0 64a160.192 160.192 0 0 0-160 160c0 88.192 71.744 160 160 160s160-71.808 160-160-71.744-160-160-160z">
-                    </path>
-                  </g>
-                </svg>
-              </span>
-            </div>
-
-            <div class="flex flex-col">
-              <small class="text-xs text-muted-foreground">Visionnée</small>
-              <a class="text-xs font-semibold text-foreground hover:text-primary"> {{viewCount}} fois </a>
-            </div>
-          </div>
-
-          <!-- Price -->
-          <div class="flex items-center space-x-2">
-            <div class="flex h-7 w-7 flex-shrink-0 items-center justify-center rounded-full bg-primary text-center">
-              <span class="text-xs font-semibold text-primary-foreground">
-                <svg viewBox="0 0 24 24" width="18px" height="18px" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                  <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
-                  <g id="SVGRepo_iconCarrier">
-                    <path
-                      d="M10.0464 14C8.54044 12.4882 8.67609 9.90087 10.3494 8.22108L15.197 3.35462C16.8703 1.67483 19.4476 1.53865 20.9536 3.05046C22.4596 4.56228 22.3239 7.14956 20.6506 8.82935L18.2268 11.2626"
-                      stroke="#fff" stroke-width="1.5" stroke-linecap="round"></path>
-                    <path
-                      d="M13.9536 10C15.4596 11.5118 15.3239 14.0991 13.6506 15.7789L11.2268 18.2121L8.80299 20.6454C7.12969 22.3252 4.55237 22.4613 3.0464 20.9495C1.54043 19.4377 1.67609 16.8504 3.34939 15.1706L5.77323 12.7373"
-                      stroke="#fff" stroke-width="1.5" stroke-linecap="round"></path>
-                  </g>
-                </svg>
-              </span>
-            </div>
-
-            <div class="flex flex-col">
-              <small class="text-xs text-muted-foreground">Partagée</small>
-              <a href="" class="text-xs font-semibold text-foreground hover:text-primary"> {{shareCount}} fois </a>
-            </div>
-          </div>
-        </div>
-        <button id="share-ref" (click)="shareRef(ref)"
-          class="flex justify-center items-center  gap-2  rounded-md bg-primary px-4 py-2.5 text-sm font-semibold text-primary-foreground ">
-          <svg width="24px" height="24px" viewBox="-0.5 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-            <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
-            <g id="SVGRepo_iconCarrier">
-              <path
-                d="M13.47 4.13998C12.74 4.35998 12.28 5.96 12.09 7.91C6.77997 7.91 2 13.4802 2 20.0802C4.19 14.0802 8.99995 12.45 12.14 12.45C12.34 14.21 12.79 15.6202 13.47 15.8202C15.57 16.4302 22 12.4401 22 9.98006C22 7.52006 15.57 3.52998 13.47 4.13998Z"
-                stroke="#fff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-            </g>
-          </svg>
-          <span>Partage la ref !</span>
-        </button>
-      </div>
-    </div>
-  </div>
+  <app-ref-player *ngIf="ref" [ref]="ref"></app-ref-player>
 </div>
