--- a/src/app/modules/ref/ref-upload/ref-upload.component.html
+++ b/src/app/modules/ref/ref-upload/ref-upload.component.html
@@ -16,7 +16,7 @@
       </div>
 
       <div class="space-y-3 text-left">
-        <div class="form__group">
+        <!-- <div class="form__group">
           <div class="relative">
             <input type="text" id="title" [ngClass]="{ 'is__invalid-input': submitted && controls['title'].errors }"
               class="peer block" placeholder=" " formControlName="title" />
@@ -28,7 +28,7 @@
           <div *ngIf="submitted && controls['title'].errors" class="is__invalid-error text-primary">
             <div *ngIf="controls['title'].errors['required']">Champs obligatoire</div>
           </div>
-        </div>
+        </div> -->
 
         <div class="form__group">
           <div class="relative">
@@ -40,9 +40,6 @@
               Auteur de la ref (ex: Mbappe)
             </label>
           </div>
-          <div *ngIf="submitted && controls['memeAuthor'].errors" class="is__invalid-error">
-            <div *ngIf="controls['memeAuthor'].errors['required']">Champs obligatoire</div>
-          </div>
         </div>
 
         <div class="form__group">
@@ -51,7 +48,7 @@
               class="peer block" placeholder=" " formControlName="memeRef" />
             <label for="memeRef"
               class="absolute top-2 left-1 z-10 origin-[0] -translate-y-4 scale-95 transform bg-background px-2 text-sm text-muted-foreground duration-300 peer-placeholder-shown:top-1/2 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:scale-100 peer-focus:top-2 peer-focus:-translate-y-4 peer-focus:scale-95 peer-focus:px-2 peer-focus:text-primary">
-              La ref culte (ex: Il va pas la chercher)
+              La ref culte (ex: Il va pas la chercher) <span class="text-primary">*</span>
             </label>
           </div>
           <div *ngIf="submitted && controls['memeRef'].errors" class="is__invalid-error">
@@ -66,7 +63,7 @@
               placeholder=" " formControlName="tiktokVideoCite" />
             <label for="tiktokVideoCite"
               class="absolute top-2 left-1 z-10 origin-[0] -translate-y-4 scale-95 transform bg-background px-2 text-sm text-muted-foreground duration-300 peer-placeholder-shown:top-1/2 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:scale-100 peer-focus:top-2 peer-focus:-translate-y-4 peer-focus:scale-95 peer-focus:px-2 peer-focus:text-primary  peer-[:not(:placeholder-shown)]:overflow-hidden peer-[:not(:placeholder-shown)]:text-ellipsis peer-[:not(:placeholder-shown)]:max-w-full peer-[:not(:placeholder-shown)]:whitespace-nowrap peer-focus:overflow-hidden peer-focus:text-ellipsis peer-focus:max-w-full peer-focus:whitespace-nowrap">
-              Lien de la ref Tiktok (ex: https://tiktok.com/user/video/1234)
+              Lien de la ref Tiktok (ex: https://tiktok.com/user/video/1234) <span class="text-primary">*</span>
             </label>
           </div>
           <div *ngIf="submitted && controls['tiktokVideoCite'].errors" class="is__invalid-error">
