Modif ssr pour avoir le chargement de la page

--- a/src/app/modules/ref/ref-player/ref-player.component.html
+++ b/src/app/modules/ref/ref-player/ref-player.component.html
@@ -1,4 +1,4 @@
-<div class="h-full w-full flex gap-5 flex-col padding p-4 md:p-8 bg-background rounded-xl" *ngIf="ref ">
+<div class="h-full w-full flex gap-5 flex-col padding p-4 md:p-8 bg-background rounded-xl">
   <div class="h-full" *ngIf="ref.tiktokVideoUrl">
     <iframe class="rounded-xl" width="100%" height="100%" [src]="ref.tiktokVideoUrl" allow="fullscreen"
       title="test"></iframe>
