Algolia to fetch instead of firebase

--- a/src/app/modules/ref/ref-view/ref-view.component.html
+++ b/src/app/modules/ref/ref-view/ref-view.component.html
@@ -1,5 +1,5 @@
 <div class="h-full p-4 md:p-8 ">
-  <ng-container *ngIf="ref$ | async as ref">
+  <ng-container *ngIf="ref">
     <app-ref-player [ref]="ref"></app-ref-player>
   </ng-container>
 </div>
