correctif players + loading from algolia

--- a/src/app/modules/ref/ref-player/ref-player.component.html
+++ b/src/app/modules/ref/ref-player/ref-player.component.html
@@ -57,7 +57,7 @@
           </div>
         </div>
       </div>
-      <button id="share-ref" (click)="shareRef(ref)"
+      <button #shareRefEl (click)="shareRef(ref)"
         class="flex justify-center items-center  gap-2  rounded-md bg-primary px-4 py-2.5 text-sm font-semibold text-primary-foreground ">
         <svg width="24px" height="24px" viewBox="-0.5 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
           <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
