--- a/src/app/modules/dashboard/components/ref/ref-table/ref-table.component.html
+++ b/src/app/modules/dashboard/components/ref/ref-table/ref-table.component.html
@@ -2,11 +2,13 @@
   <div class="mb-4 flex items-center justify-between">
     <div class="flex-col items-center">
       <h3 class="text-md font-bold text-foreground">Dernières refs ajoutées</h3>
-      <span class="text-xs text-muted-foreground">Updated 37 minutes ago</span>
+      <span class="text-xs text-muted-foreground" *ngIf="refs.length > 0">Il y a environ {{lastVideoTime}}</span>
     </div>
-    <button
-      class="flex-none rounded-md bg-card px-4 py-2.5 text-xs font-semibold text-muted-foreground hover:bg-muted hover:text-foreground">
-      History
+    <button (click)="navigateToUpload()"
+      class="flex justify-center items-center gap-2 rounded-md bg-card px-4 py-2.5 text-xs font-semibold text-muted-foreground hover:bg-muted hover:text-foreground">
+
+      <svg-icon src="assets/icons/heroicons/outline/upload.svg" [svgClass]="'h-4 w-4'"> </svg-icon>
+      Ajouter une ref
     </button>
   </div>
 
