--- a/src/app/modules/layout/components/navbar/navbar-mobile/navbar-mobile.component.html
+++ b/src/app/modules/layout/components/navbar/navbar-mobile/navbar-mobile.component.html
@@ -18,8 +18,8 @@
         <div>
           <!-- Logo -->
           <div class="flex items-center justify-start sm:order-2 md:mr-10 lg:hidden">
-            <a class="flex items-center justify-center rounded bg-primary p-2 focus:outline-none focus:ring-1">
-              <svg-icon src="assets/icons/logo.svg"> </svg-icon>
+            <a class="flex items-center justify-center rounded  p-2 focus:outline-none focus:ring-1">
+              <img class="h-8 w-auto" src="assets/images/logo.png" alt="Logo">
             </a>
             <b class="pl-3 text-sm font-bold text-foreground"> J'ai la ref ! </b>
           </div>
