--- a/src/app/modules/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/modules/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
@@ -10,25 +10,21 @@
       <!-- Menu List -->
       <div (click)="toggleMenu(item)" class="group relative text-muted-foreground">
         <!-- Icon -->
-        <div
-          [ngClass]="item.active && !menuService.showSideBar ? 'text-primary' : 'text-muted-foreground/50'"
+        <div [ngClass]="item.active && !menuService.showSideBar ? 'text-primary' : 'text-muted-foreground/50'"
           class="pointer-events-none absolute m-2">
           <svg-icon src="{{ item.icon }}" [svgClass]="'h-5 w-5'"> </svg-icon>
         </div>
 
         <!-- Condition -->
-        <ng-container
-          [ngTemplateOutlet]="item.children ? childMenu : parentMenu"
+        <ng-container [ngTemplateOutlet]="item.children ? childMenu : parentMenu"
           [ngTemplateOutletContext]="{ item: item }">
         </ng-container>
 
         <!-- Workaround:: Enable routerLink -->
         <ng-template #parentMenu let-item="item">
-          <div
-            routerLink="{{ item.route }}"
+          <div routerLink="{{ item.route }}"
             class="flex h-9 cursor-pointer items-center justify-start rounded text-muted-foreground hover:bg-card hover:text-foreground">
-            <a
-              routerLinkActive="text-primary"
+            <a routerLinkActive="text-primary"
               class="ml-10 truncate text-xs font-semibold tracking-wide focus:outline-none">
               {{ item.label }}
             </a>
@@ -46,9 +42,7 @@
         </ng-template>
 
         <!-- Arrow Icon -->
-        <button
-          *ngIf="item.children"
-          [ngClass]="{ hidden: !menuService.showSideBar, 'rotate-90': item.expanded }"
+        <button *ngIf="item.children" [ngClass]="{ hidden: !menuService.showSideBar, 'rotate-90': item.expanded }"
           class="pointer-events-none absolute top-1 right-0 flex items-center p-1 text-muted-foreground/50 transition-all duration-500">
           <svg-icon src="assets/icons/heroicons/solid/chevron-right.svg" [svgClass]="'h-5 w-5'"> </svg-icon>
         </button>
