--- a/src/app/modules/ref/ref-player/ref-player.component.html
+++ b/src/app/modules/ref/ref-player/ref-player.component.html
@@ -5,7 +5,7 @@
   </div>
   <div class="flex justify-between flex-col sm:flex-row gap-3 sm:gap-0">
     <div>
-      <h2 class="text-2xl font-semibold text-foreground">{{ref.title}}</h2>
+      <h2 class="md:text-2xl font-semibold text-foreground">{{ref.memeRef}}</h2>
       <small class="font-semibold text-muted-foreground">{{ref.memeAuthor}}</small>
     </div>
     <div class="flex flex-col sm:flex-row sm:justify-start sm:space-x-8 gap-3 sm:gap-0">
