--- a/src/app/modules/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/modules/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
@@ -8,7 +8,7 @@
     <!-- List items -->
     <li *ngFor="let item of menu.items">
       <!-- Menu List -->
-      <div (click)="toggleMenu(item)" class="group relative text-muted-foreground">
+      <div *ngIf="!item.externUrl" (click)="toggleMenu(item)" class="group relative text-muted-foreground">
         <!-- Icon -->
         <div [ngClass]="item.active && !menuService.showSideBar ? 'text-primary' : 'text-muted-foreground/50'"
           class="pointer-events-none absolute m-2">
